[fix] Fixed the unit and integration tests for d04s06